--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -62,9 +62,9 @@
 %=============================================================================
 % \mode{kosong}
 % \mode{cover}
- \mode{sidang}
-%\mode{sidang_akhir}
-%\mode{final} 
+% \mode{sidang}
+ \mode{sidang_akhir}
+% \mode{final} 
 %=============================================================================
 
 %_____________________________________________________________________________
@@ -170,9 +170,9 @@
 %			 - Gunakan perintah \texorpdfstring{\\}{} untuk baris baru
 %=============================================================================
 
-\judulINA{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Portal Akademik Mahasiswa}
+\judulINA{Informatika Student Portal: Kustomisasi Portal Akademik Mahasiswa untuk Mahasiswa Teknik Informatika UNPAR}
 
-\judulENG{IT Student Portal: Exploiting Web Scraping for \textit{Portal Akademik Mahasiswa} Customization}
+\judulENG{Informatika Student Portal: \textit{Portal Akademik Mahasiswa} Customization for UNPAR's Informatics Engineering Students}
 
 %_____________________________________________________________________________
 %=============================================================================
