Major Edit Bab 2,3,5

--- a/app/StudentPortal/README
+++ b/app/StudentPortal/README
@@ -1,9 +1,6 @@
-\/\//\\//\\//\\//\\//\/
-\/ IT Student Portal /\
-\//\\//\\//\\//\\//\\/\
 
-================
-Play application
-================
+==========================
+Informatika Student Portal
+==========================
 
-This folder contains IT Student Portal project directory.
+Informatika Student Portal project directory.
