--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -276,8 +276,6 @@ Dalam menganalisis kebutuhan Informatika Student Portal, penulis melakukan wawan
 	Mahasiswa munginnginkan agar dapat melihat pohon kurikulum Program Studi Teknik Informatika dalam Portal Akademik Mahasiswa.
 	\item Pemberitahuan\\
 	Mahasiswa menginginkan Portal Akademik Mahasiswa menampilkan pemberitahuan berupa \textit{pop up} mengenai pengumuman terkini.
-	\item \textit{Chatting}\\
-	Mahasiswa menginginkan agar dapat berkomunikasi dengan sesama pengguna Portal Akademik Mahasiswa melalui \textit{chat}.
 	\item Unggah \textit{Curriculum Vitae}
 	Mahasiswa menginginkan agar dapat mengunggah data mengenai kegiatan dan keaktifan di universitas agar dapat digunakan oleh perusahaan untuk mencari mahasiswa dengan kriteria tertentu misalnya untuk kepentingan magang dan beasiswa.
 \end{enumerate}
@@ -570,7 +568,7 @@ Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang
 			\item Aktor: Mahasiswa
 			\item Deskripsi: Memeriksa prasyarat mata kuliah yang dibuka pada semester terkini
 			\item Kondisi awal: Mahasiswa telah \textit{login}
-			\item Kondisi akhir: Halaman prasyarat mata kuliah ditampilkan dan berisi prasyarat mata kuliah yang dibuka pada semester terkini
+			\item Kondisi akhir: Halaman prasyarat mata kuliah ditampilkan dan berisi mata kuliah yang dibuka pada semester terkini beserta status prasyaratnya
 			\item Skenario utama: \\ \\
 				\begin{tabular}{|p{0.5cm} |p{6cm}| p{6cm}|}
 						\hline
@@ -586,7 +584,7 @@ Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang
 			\item Aktor: Mahasiswa
 			\item Deskripsi: Melihat jadwal kuliah yang sudah tersusun dan terurut berdasarkan hari
 			\item Kondisi awal: Mahasiswa telah \textit{login}
-			\item Kondisi akhir: Halaman jadwal ditampilkan dan berisi jadwal kuliah, UTS, dan UAS yang sudah tersusun dan terurut berdasarkan hari te
+			\item Kondisi akhir: Halaman jadwal ditampilkan dan berisi jadwal kuliah yang sudah tersusun dan terurut berdasarkan hari te
 			\item Skenario utama: \\ \\
 				\begin{tabular}{|p{0.5cm} |p{6cm}| p{6cm}|}
 						\hline
@@ -614,6 +612,7 @@ Berdasarkan hasil analisis pada subbab \ref{sec:kebutuhan}, dari lima fitur yang
 \end{enumerate}
 
 \section{Analisis Kelas}
+\label{sec:analisis_kelas}
 Diagram kelas analisis untuk Informatika Student Portal ditunjukkan pada gambar \ref{fig:3_class_diagram}.
 	\begin{figure}[H]
 			\centering
