--- a/doc/DokumenSkripsi/Bab/bab4.tex
+++ b/doc/DokumenSkripsi/Bab/bab4.tex
@@ -1,2 +1,20 @@
 \chapter{Perancangan}
 \label{chap:perancangan}
+
+\section{Diagram Kelas Rinci} 
+\label{sec:diagram_kelas_rinci}
+Diagram kelas rinci diperoleh dari hasil pengembangan diagram kelas analisis pada subbab \ref{sec:analisis_kelas}. Diagram kelas rinci dapat dilihat pada gambar \ref{fig:final_class_diagram}. Rincian kelas beserta fungsinya
+
+\section{Perancangan Antarmuka}
+\label{sec:perancangan_antarmuka}
+
+Untuk memenuhi kebutuhan interaksi antara pengguna dengan sistem, maka dirancanglah sebuah antarmuka dari Informatika Student Portal. Rancangan antarmuka dibagi menjadi lima halaman web antara lain:
+
+\begin{enumerate}
+	\item {Antarmuka Halaman \textit{Login}}\\
+	Halaman ini digunakan untuk melakukan login. Komponen halaman ini terdiri dari logo aplikasi, kolom email, kolom password, dan tombol login seperti yang ditunjukkan pada gambar. Untuk melakukan login, pengguna perlu memasukkan email dan password yang sesuai kemudian menekan tombol login. Jika berhasil pengguna akan diarahkan ke halaman home. 
+	\item {Antarmuka Halaman \textit{Home}}\\
+	\item {Antarmuka Halaman Prasyarat Mata Kuliah}\\
+	\item {Antarmuka Halaman Jadwal Kuliah}\\
+	\item {Antarmuka Halaman Data Akademik}\\
+\end{enumerate}
